--- a/website.html
+++ b/website.html
@@ -1,1 +1,15 @@
+<!DOCTYPE html>
+<html>
+<script>
+document.getElementById("demo").innerHTML = "Hello JavaScript!";
+</script>
+<head>
+<title>Degreeworks 2.0</title>
+</head>
+<body>
 
+   <h1></h1>
+   <p id = "demo"></p>
+
+</body>
+</html>
