--- a/website.html
+++ b/website.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <script>
-document.getElementById("demo").innerHTML = "Hello JavaScript!";
+function initialize(){document.getElementById("demo").innerHTML = "Hello JavaScript!";}
 </script>
 <head>
 <title>Degreeworks 2.0</title>
 </head>
-<body>
+<body onload = "initialize()">
 
    <h1></h1>
    <p id = "demo"></p>
