Added html for the navbar and some tables in main

--- a/website.html
+++ b/website.html
@@ -61,20 +61,40 @@
         <h1>I Can't Believe It's Not DegreeWorks!</h1>
         <midleft>Hunter|CUNY</midleft>
         <midright>DegreeWorks+</midright>
-        <table>
-            <tr>
-                <th>CUNYfirst</th>
-                <th>Pathways</th>
-                <th>FAQ</th>
-                <th>Course Schedule</th>
-                <th>Print</th>
-                <th>Log Out</th>
-            </tr>
-        </table>
     </div>
 
     <div class="topnav">
-        <h1>Bar</h1>
+        <table id="links">
+            <tr>
+                <th><a href="#">CUNYfirst</a></th>
+                <th><a href="#">Pathways</a></th>
+                <th><a href="#">FAQ</a></th>
+                <th><a href="#">Course Schedule</a></th>
+                <th><a href="#">Print</a></th>
+                <th><a href="#">Log Out</a></th>
+            </tr>
+        </table>
+        <table id="studentInfo">
+            <tr>
+                <th>Student ID Number</th>
+                <th>Student Name</th>
+                <th>Degree</th>
+                <th>Major</th>
+                <th>School</th>
+                <th>Student Class Level</th>
+                <th>Last Audit</th>
+            </tr>
+            <tr>
+                <td id="ID"><input type="number" readonly value="23000001"></td>
+                <td id="Name"><input type="text" readonly value="Raboy, Nick"></td>
+                <td id="Degree"><input type="text" readonly value="BA"></td>
+                <td id="Major"><input type="text" readonly value="U Computer Science"></td>
+                <td id="School"><input type="text" readonly value="U"></td>
+                <td id="Year"><input type="text" readonly value="U-SOPH"></td>
+                <td id="Audit"><input type="date" readonly value="2021-01-24"></td>
+              </tr>
+        </table>
+        <!-- <h1>Bar</h1> -->
     </div>
 
     <!-- Collapseable Sidebar courtsey of W3Schools -->
@@ -89,6 +109,35 @@
     <div id="main">
         <!-- <button class="openbtn" onclick="toggleNav()">☰ Sidebar</button> -->
         <!-- <h2>Collapsed Sidebar</h2> -->
+        
+        <h1>Hunter College</h1>
+        <h2>Legend</h2>
+        <p>Complete, Not Complete, In Progress, etc.</p>
+        <table>
+            <tr><th>Student View</th></tr>
+            <tr><td>Preferred Name</td></tr>
+            <tr><td>Legal Name</td></tr>
+            <tr><td>ID</td></tr>
+            <tr><td>Transfer Credits</td></tr>
+            <tr><td>Academic Standing</td></tr>
+            <tr><td>Student Groups</td></tr>
+            <tr><td>Cumulative GPA</td></tr>
+        </table>
+        <table>
+            <tr><th>Degree in Bachelor of Arts</th></tr>
+            <tr><td>A minimum of 120 credits is required.</td></tr>
+            <tr><td>A minimum of 30 credits must be taken in residence.</td></tr>
+            <tr><td>Liberal Arts/Scrience Requirement</td></tr>
+            <tr><td>Overall GPA Requirement Met</td></tr>
+            <tr><td>CUNY Skills Assessment Tests</td></tr>
+            <tr><td>CUNY Common Core</td></tr>
+            <tr><td>Hunter Focus: 12 credits required</td></tr>
+            <tr><td>Writing Requirement</td></tr>
+            <tr><td>Pluralism & Diversity Requirement</td></tr>
+            <tr><td>Major Requirements</td></tr>
+            <tr><td>Minor Optional</td></tr>
+            <tr><td>APPLICATION FOR GRADUATION REMINDER</td></tr>
+        </table>
 
         <!-- Dropdown Menu -->
         <div class="dropdown">
