--- a/website.html
+++ b/website.html
@@ -14,7 +14,7 @@
     <title>DegreeWorks+</title>
 </head>
 
-<body onload="retrieveStudentData()">
+<body onload="postTest()">
 
     <div class="header">
         <table>
